# droid-utils

./: 51-android.rules  README.md  pyproject.toml  requirements.txt
app/: __main__.py  align.py  open.py  recover.py  swipe.py
